# flysim-rc

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  UPDATE-PLAN.md  index.html  package-lock.json  package.json  test-modern.html  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  update-jsbsim.yml
aircraft/F450/: FlightControl.xml
aircraft/rascal110/: rascal110.xml  reset00.xml
bridge/: README.md  ardupilot-json-bridge.py  bridge.py  udp-bridge.py
cmake/: CMakeLists.txt
docs/: FRD.md  INPUT_ABSTRACTION_LAYER.md  PRD.md
docs/history/: FINAL_SUMMARY.md  FIXES.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  README.md  TESTING.md
engine/: Hacker-A60.xml
patches/: 01-emscripten-compat.patch  02-emscripten-io-guards.patch  MANIFEST.json
public/aircraft/F450/: FlightControl.xml
public/aircraft/Hexa550/: Effectors.xml  FlightControl.xml  Gear.xml  Hexa550.xml  Mass.xml  Propulsion.xml
public/aircraft/Octo650/: Effectors.xml  FlightControl.xml  Gear.xml  Mass.xml  Octo650.xml  Propulsion.xml
public/aircraft/Tri450/: Effectors.xml  FlightControl.xml  Gear.xml  Mass.xml  Propulsion.xml  Tri450.xml
public/aircraft/c172x/: test_script.xml
public/wasm/: jsbsim_wasm.mjs  jsbsim_wasm.wasm
scripts/: apply-patches.sh  build-wasm.sh  copy-wasm.mjs  generate-multirotor.mjs  prepare-jsbsim.sh  set-pin.mjs  update-jsbsim.sh  verify-build.sh
scripts/bindings-generator/: header-scan.mjs  index.mjs  render-cpp.mjs  render-ts.mjs
src/: index.ts  wasm.ts
src/__tests__/: FlySimCore.test.ts  errors.test.ts
src/core/: AircraftLoader.ts  EngineManager.ts  FlySimCore.ts  errors.ts  types.ts  vfs.ts
test/: channels.test.ts  multi.test.ts  smoke.test.ts
